--- a/app/src/main/res/layout/bluetoothview.xml
+++ b/app/src/main/res/layout/bluetoothview.xml
@@ -37,25 +37,59 @@
         android:layout_height="wrap_content">
 
         <TextView
-
+            android:gravity="center"
             android:text="BLUETOOTH"
             android:layout_width="0dp"
             android:layout_weight="2"
+            android:layout_height="match_parent" />
+            <ImageButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+                android:src="@drawable/onbluetooth"
+                android:contentDescription="image"
             android:layout_height="wrap_content" />
-            <Button
+            <ImageButton
+                android:src="@drawable/bluetoothdisable"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content" />
-            <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-            <Button
+            <ImageButton
+                android:src="@drawable/search"
                 android:text="show"
                 android:textSize="12sp"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <TextView
+
+            android:text="WI-FI"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:layout_height="match_parent" />
+        <ImageButton
+            android:src="@drawable/wifionn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <ImageButton
+            android:src="@drawable/turnofwifi"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <ImageButton
+            android:text="show"
+            android:textSize="12sp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/wifion"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 </LinearLayout>
