--- a/app/src/main/res/layout/bluetoothview.xml
+++ b/app/src/main/res/layout/bluetoothview.xml
@@ -90,6 +90,20 @@
             android:layout_weight="1"
             android:src="@drawable/wifion"
             android:layout_height="wrap_content" />
-
     </LinearLayout>
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_width="wrap_content"
+        android:text="RINGER VOLUME"
+        android:layout_height="wrap_content" />
+    <android.support.v7.widget.AppCompatSeekBar
+        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_margin="5dp"
+        android:text="@string/scedulertask"
+        android:layout_height="wrap_content" />
 </LinearLayout>
